dump of improvements

--- a/examples/basics.ipynb
+++ b/examples/basics.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b41e8ac21c383228bdbfdc61f7f2e9f8d014eff821b42702b98c171bacf50d85"
+  "signature": "sha256:19687554cb4d9b67be7cf51d59af129325f71a7db77cdf19ac2194089c20b0a2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -62,7 +62,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 3,
        "text": [
         "64741364     100\n",
         "142531084     29\n",
@@ -73,7 +73,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -89,7 +89,7 @@
        "stream": "stdout",
        "text": [
         "Added 531932213 (0.0%)\n",
-        "Added 526809506 (0.1%)"
+        "Added 526809506 (1.0%)"
        ]
       },
       {
@@ -97,7 +97,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 513214407 (0.2%)"
+        "Added 513214407 (2.0%)"
        ]
       },
       {
@@ -105,7 +105,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 494297597 (0.3%)"
+        "Added 494297597 (3.0%)"
        ]
       },
       {
@@ -113,7 +113,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 485902986 (0.4%)"
+        "Added 485902986 (4.0%)"
        ]
       },
       {
@@ -121,7 +121,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 476150797 (0.5%)"
+        "Added 476150797 (5.0%)"
        ]
       },
       {
@@ -129,7 +129,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 471567436 (0.6%)"
+        "Added 471567436 (6.0%)"
        ]
       },
       {
@@ -137,7 +137,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 468109032 (0.7%)"
+        "Added 468109032 (7.0%)"
        ]
       },
       {
@@ -145,7 +145,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 465041243 (0.8%)"
+        "Added 465041243 (8.0%)"
        ]
       },
       {
@@ -153,7 +153,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Added 459824629 (0.9%)"
+        "Added 459824629 (9.0%)"
        ]
       },
       {
@@ -164,14 +164,37 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "details"
+      "details[526809506].get_match_report()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "KeyError",
+       "evalue": "'team'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-32-cc8f4541f92d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdetails\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m526809506\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_match_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Users/admin/Envs/pandas-dev/lib/python2.7/site-packages/dota-0.1-py2.7.egg/dota/api.pyc\u001b[0m in \u001b[0;36mget_match_report\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    242\u001b[0m                 'item_5', 'team']\n\u001b[1;32m    243\u001b[0m         df = pd.concat([pd.Series(self.get_by_player(key))\n\u001b[0;32m--> 244\u001b[0;31m                         for key in keys], axis=1, keys=keys)\n\u001b[0m\u001b[1;32m    245\u001b[0m         \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'match_id'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhero_id_to_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/admin/Envs/pandas-dev/lib/python2.7/site-packages/dota-0.1-py2.7.egg/dota/api.pyc\u001b[0m in \u001b[0;36mget_by_player\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0;31m# account id isn't nesc unique.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         return {player['hero_id']: player[key]\n\u001b[0;32m--> 235\u001b[0;31m                 for player in self.resp['players']}\n\u001b[0m\u001b[1;32m    236\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_match_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/admin/Envs/pandas-dev/lib/python2.7/site-packages/dota-0.1-py2.7.egg/dota/api.pyc\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m((player,))\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0;31m# account id isn't nesc unique.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         return {player['hero_id']: player[key]\n\u001b[0;32m--> 235\u001b[0;31m                 for player in self.resp['players']}\n\u001b[0m\u001b[1;32m    236\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_match_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mKeyError\u001b[0m: 'team'"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
