--- a/examples/basics.ipynb
+++ b/examples/basics.ipynb
@@ -47,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -1034,6 +1034,50 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 195
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Joe's data\n",
+      "\n",
+      "steam_id = api.id_64(142531084)\n",
+      "joe_hist = h.get_match_history(account_id=steam_id)\n",
+      "details = joe_hist.get_all_match_details()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\r",
+        "Added 540384583 (0.0%)\n",
+        "\r",
+        "Added 539084281 (0.2%)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "\r",
+        "Added 539058592 (0.4%)"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "details"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
