--- a/examples/basics.ipynb
+++ b/examples/basics.ipynb
@@ -17,26 +17,36 @@
       "\n",
       "import arrow\n",
       "import json\n",
+      "import os\n",
+      "\n",
       "import requests\n",
       "import pandas as pd\n",
       "\n",
       "import matplotlib.pyplot as plt\n",
-      "import seaborn as sns\n",
       "import numpy as np\n",
       "\n",
       "from dota import api"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# supply your own API key.\n",
-      "with open('/Users/admin/Dropbox/bin/api-keys.txt', 'r') as f:\n",
+      "with open(os.path.expanduser('~/Dropbox/bin/api-keys.txt'), 'r') as f:\n",
       "    api_keys = json.load(f)\n",
       "\n",
       "KEY = api_keys['steam']  # just a string with the key.\n",
@@ -47,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
