--- a/examples/Pro Matches.ipynb
+++ b/examples/Pro Matches.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c840f4b9f508093dfd11aedc31bfd786a26e6340fffe50d28d430dde6fbb2a9"
+  "signature": "sha256:55dd6f760fc87022b8db8e3627bd2a8b4e69c9ca57188e3c8ea6ddf393de1938"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,27 +16,29 @@
       "import re\n",
       "import json\n",
       "\n",
+      "import pandas as pd\n",
+      "\n",
       "import dota\n",
       "from dota import api"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "with open('/Users/tom/Dropbox/bin/api-keys.txt') as f:\n",
+      "with open(os.path.expanduser('~/') + 'Dropbox/bin/api-keys.txt') as f:\n",
       "    key = json.load(f)['steam']\n",
       "\n",
-      "h = api.API(key=key)\n"
+      "h = api.API(key=key)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -59,13 +61,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 70,
+       "prompt_number": 5,
        "text": [
-        "['557162694', '557131768', '557125337', '557106666']"
+        "[]"
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -76,7 +78,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -94,12 +96,328 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "details = {}\n",
+      "\n",
+      "for k in matches:\n",
+      "    with open('../data/pro/' + k + '.json') as f:\n",
+      "        details[k] = api.DetailsResponse(json.load(f))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sub = it.islice(details.keys(), 500)\n",
+      "\n",
+      "df = pd.concat([details[k].match_report() for k in sub])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "df.head()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th>level</th>\n",
+        "      <th>kills</th>\n",
+        "      <th>deaths</th>\n",
+        "      <th>assists</th>\n",
+        "      <th>last_hits</th>\n",
+        "      <th>denies</th>\n",
+        "      <th>gold</th>\n",
+        "      <th>gold_spent</th>\n",
+        "      <th>player_slot</th>\n",
+        "      <th>account_id</th>\n",
+        "      <th>hero_damage</th>\n",
+        "      <th>hero_healing</th>\n",
+        "      <th>item_0</th>\n",
+        "      <th>item_1</th>\n",
+        "      <th>item_2</th>\n",
+        "      <th>item_3</th>\n",
+        "      <th>item_4</th>\n",
+        "      <th>item_5</th>\n",
+        "      <th>win</th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>match_id</th>\n",
+        "      <th>team</th>\n",
+        "      <th>hero</th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th rowspan=\"5\" valign=\"top\">125486981</th>\n",
+        "      <th rowspan=\"5\" valign=\"top\">Radiant</th>\n",
+        "      <th>life_stealer</th>\n",
+        "      <td> 22</td>\n",
+        "      <td> 4</td>\n",
+        "      <td> 5</td>\n",
+        "      <td>  9</td>\n",
+        "      <td> 259</td>\n",
+        "      <td>  5</td>\n",
+        "      <td>  714</td>\n",
+        "      <td> 17419</td>\n",
+        "      <td> 3</td>\n",
+        "      <td>   8712306</td>\n",
+        "      <td> 10456</td>\n",
+        "      <td> 543</td>\n",
+        "      <td>  65</td>\n",
+        "      <td> 168</td>\n",
+        "      <td> 135</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>  63</td>\n",
+        "      <td> 151</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>beastmaster</th>\n",
+        "      <td> 21</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 5</td>\n",
+        "      <td> 12</td>\n",
+        "      <td> 217</td>\n",
+        "      <td>  8</td>\n",
+        "      <td>  329</td>\n",
+        "      <td> 14294</td>\n",
+        "      <td> 4</td>\n",
+        "      <td>  21265941</td>\n",
+        "      <td>  6721</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>  36</td>\n",
+        "      <td> 110</td>\n",
+        "      <td>  48</td>\n",
+        "      <td>  92</td>\n",
+        "      <td> 108</td>\n",
+        "      <td>  41</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>gyrocopter</th>\n",
+        "      <td> 22</td>\n",
+        "      <td> 9</td>\n",
+        "      <td> 6</td>\n",
+        "      <td>  5</td>\n",
+        "      <td> 348</td>\n",
+        "      <td> 10</td>\n",
+        "      <td>  682</td>\n",
+        "      <td> 21338</td>\n",
+        "      <td> 2</td>\n",
+        "      <td> 100317750</td>\n",
+        "      <td> 16048</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>  63</td>\n",
+        "      <td> 139</td>\n",
+        "      <td> 185</td>\n",
+        "      <td> 116</td>\n",
+        "      <td>   0</td>\n",
+        "      <td> 135</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>shadow_demon</th>\n",
+        "      <td> 14</td>\n",
+        "      <td> 3</td>\n",
+        "      <td> 9</td>\n",
+        "      <td> 14</td>\n",
+        "      <td>  44</td>\n",
+        "      <td>  1</td>\n",
+        "      <td> 1017</td>\n",
+        "      <td>  7210</td>\n",
+        "      <td> 1</td>\n",
+        "      <td>  19672354</td>\n",
+        "      <td>  8352</td>\n",
+        "      <td>   0</td>\n",
+        "      <td> 188</td>\n",
+        "      <td> 180</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>  73</td>\n",
+        "      <td>   0</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>leshrac</th>\n",
+        "      <td> 15</td>\n",
+        "      <td> 3</td>\n",
+        "      <td> 8</td>\n",
+        "      <td>  6</td>\n",
+        "      <td>  69</td>\n",
+        "      <td>  0</td>\n",
+        "      <td>  673</td>\n",
+        "      <td>  6364</td>\n",
+        "      <td> 0</td>\n",
+        "      <td>  94155156</td>\n",
+        "      <td>  6498</td>\n",
+        "      <td>   0</td>\n",
+        "      <td>  73</td>\n",
+        "      <td> 180</td>\n",
+        "      <td>  36</td>\n",
+        "      <td>  73</td>\n",
+        "      <td>  21</td>\n",
+        "      <td>  46</td>\n",
+        "      <td> False</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 19 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "                                level  kills  deaths  assists  last_hits  \\\n",
+        "match_id  team    hero                                                     \n",
+        "125486981 Radiant life_stealer     22      4       5        9        259   \n",
+        "                  beastmaster      21      1       5       12        217   \n",
+        "                  gyrocopter       22      9       6        5        348   \n",
+        "                  shadow_demon     14      3       9       14         44   \n",
+        "                  leshrac          15      3       8        6         69   \n",
+        "\n",
+        "                                denies  gold  gold_spent  player_slot  \\\n",
+        "match_id  team    hero                                                  \n",
+        "125486981 Radiant life_stealer       5   714       17419            3   \n",
+        "                  beastmaster        8   329       14294            4   \n",
+        "                  gyrocopter        10   682       21338            2   \n",
+        "                  shadow_demon       1  1017        7210            1   \n",
+        "                  leshrac            0   673        6364            0   \n",
+        "\n",
+        "                                account_id  hero_damage  hero_healing  item_0  \\\n",
+        "match_id  team    hero                                                          \n",
+        "125486981 Radiant life_stealer     8712306        10456           543      65   \n",
+        "                  beastmaster     21265941         6721             0      36   \n",
+        "                  gyrocopter     100317750        16048             0      63   \n",
+        "                  shadow_demon    19672354         8352             0     188   \n",
+        "                  leshrac         94155156         6498             0      73   \n",
+        "\n",
+        "                                item_1  item_2  item_3  item_4  item_5    win  \n",
+        "match_id  team    hero                                                         \n",
+        "125486981 Radiant life_stealer     168     135       0      63     151  False  \n",
+        "                  beastmaster      110      48      92     108      41  False  \n",
+        "                  gyrocopter       139     185     116       0     135  False  \n",
+        "                  shadow_demon     180       0       0      73       0  False  \n",
+        "                  leshrac          180      36      73      21      46  False  \n",
+        "\n",
+        "[5 rows x 19 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 31
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "counts = df.groupby(level='hero')['win'].count()\n",
+      "counts.sort(ascending=False)\n",
+      "counts"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "hero\n",
+        "rubick            208\n",
+        "visage            184\n",
+        "dark_seer         155\n",
+        "gyrocopter        154\n",
+        "life_stealer      152\n",
+        "rattletrap        151\n",
+        "furion            150\n",
+        "shadow_demon      146\n",
+        "nyx_assassin      145\n",
+        "weaver            129\n",
+        "crystal_maiden    119\n",
+        "batrider          116\n",
+        "puck              115\n",
+        "alchemist         108\n",
+        "bane              103\n",
+        "...\n",
+        "zuus             7\n",
+        "tidehunter       6\n",
+        "ember_spirit     6\n",
+        "skeleton_king    5\n",
+        "ogre_magi        5\n",
+        "necrolyte        5\n",
+        "tusk             5\n",
+        "omniknight       4\n",
+        "pudge            4\n",
+        "bloodseeker      4\n",
+        "meepo            4\n",
+        "medusa           4\n",
+        "centaur          3\n",
+        "axe              3\n",
+        "sniper           1\n",
+        "Name: win, Length: 102, dtype: int64"
+       ]
+      }
+     ],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "counts."
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
