--- a/examples/Pro Matches.ipynb
+++ b/examples/Pro Matches.ipynb
@@ -12,6 +12,28 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from IPython import display"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "display.DisplayObject"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "import os\n",
       "import re\n",
       "import json\n",
