--- a/examples/Pro Matches.ipynb
+++ b/examples/Pro Matches.ipynb
@@ -25,12 +25,13 @@
       "from matplotlib.collections import PatchCollection\n",
       "\n",
       "import dota\n",
+      "from dota.helpers import cached_games\n",
       "from dota import api"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -44,28 +45,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "details = {}\n",
-      "\n",
-      "p = pathlib.Path('../data/pro/')\n",
-      "matches = filter(None, map(lambda x: re.match(r'.*(\\d{9}).json$', str(x)),\n",
-      "                           p.iterdir()))\n",
-      "\n",
-      "for f in filter(lambda x: x.suffix == '.json', p.iterdir()):\n",
-      "    with f.open() as infile:\n",
-      "        \n",
-      "        details[f.stem] = api.DetailsResponse(json.load(infile))\n",
-      "\n"
+      "games = cached_games('../data/pro/')\n",
+      "details = [api.DetailsResponse(x) for x in games]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
