--- a/examples/Picks and bans.ipynb
+++ b/examples/Picks and bans.ipynb
@@ -120,7 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -131,7 +131,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 140
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -288,7 +288,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 4,
        "text": [
         "   hero_id is_pick  order  team       team_name  team_id   match_id  \\\n",
         "0       89   False      0     0  LGD-GAMING.int    77666  347983846   \n",
@@ -318,7 +318,146 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can't just plug in `hero_id` as a feature since the integers imply an ordering.\n",
+      "In reality `hero_id=0` is no \"closer\" to `hero_id=1` than to `hero_id=99`.\n",
+      "\n",
+      "We'll try out a feature hashing\u00a0or dict vectorizer."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.feature_extraction import DictVectorizer\n",
+      "\n",
+      "api._hero_id_to_names"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "{1: 'antimage',\n",
+        " 2: 'axe',\n",
+        " 3: 'bane',\n",
+        " 4: 'bloodseeker',\n",
+        " 5: 'crystal_maiden',\n",
+        " 6: 'drow_ranger',\n",
+        " 7: 'earthshaker',\n",
+        " 8: 'juggernaut',\n",
+        " 9: 'mirana',\n",
+        " 10: 'morphling',\n",
+        " 11: 'nevermore',\n",
+        " 12: 'phantom_lancer',\n",
+        " 13: 'puck',\n",
+        " 14: 'pudge',\n",
+        " 15: 'razor',\n",
+        " 16: 'sand_king',\n",
+        " 17: 'storm_spirit',\n",
+        " 18: 'sven',\n",
+        " 19: 'tiny',\n",
+        " 20: 'vengefulspirit',\n",
+        " 21: 'windrunner',\n",
+        " 22: 'zuus',\n",
+        " 23: 'kunkka',\n",
+        " 25: 'lina',\n",
+        " 26: 'lion',\n",
+        " 27: 'shadow_shaman',\n",
+        " 28: 'slardar',\n",
+        " 29: 'tidehunter',\n",
+        " 30: 'witch_doctor',\n",
+        " 31: 'lich',\n",
+        " 32: 'riki',\n",
+        " 33: 'enigma',\n",
+        " 34: 'tinker',\n",
+        " 35: 'sniper',\n",
+        " 36: 'necrolyte',\n",
+        " 37: 'warlock',\n",
+        " 38: 'beastmaster',\n",
+        " 39: 'queenofpain',\n",
+        " 40: 'venomancer',\n",
+        " 41: 'faceless_void',\n",
+        " 42: 'skeleton_king',\n",
+        " 43: 'death_prophet',\n",
+        " 44: 'phantom_assassin',\n",
+        " 45: 'pugna',\n",
+        " 46: 'templar_assassin',\n",
+        " 47: 'viper',\n",
+        " 48: 'luna',\n",
+        " 49: 'dragon_knight',\n",
+        " 50: 'dazzle',\n",
+        " 51: 'rattletrap',\n",
+        " 52: 'leshrac',\n",
+        " 53: 'furion',\n",
+        " 54: 'life_stealer',\n",
+        " 55: 'dark_seer',\n",
+        " 56: 'clinkz',\n",
+        " 57: 'omniknight',\n",
+        " 58: 'enchantress',\n",
+        " 59: 'huskar',\n",
+        " 60: 'night_stalker',\n",
+        " 61: 'broodmother',\n",
+        " 62: 'bounty_hunter',\n",
+        " 63: 'weaver',\n",
+        " 64: 'jakiro',\n",
+        " 65: 'batrider',\n",
+        " 66: 'chen',\n",
+        " 67: 'spectre',\n",
+        " 68: 'ancient_apparition',\n",
+        " 69: 'doom_bringer',\n",
+        " 70: 'ursa',\n",
+        " 71: 'spirit_breaker',\n",
+        " 72: 'gyrocopter',\n",
+        " 73: 'alchemist',\n",
+        " 74: 'invoker',\n",
+        " 75: 'silencer',\n",
+        " 76: 'obsidian_destroyer',\n",
+        " 77: 'lycan',\n",
+        " 78: 'brewmaster',\n",
+        " 79: 'shadow_demon',\n",
+        " 80: 'lone_druid',\n",
+        " 81: 'chaos_knight',\n",
+        " 82: 'meepo',\n",
+        " 83: 'treant',\n",
+        " 84: 'ogre_magi',\n",
+        " 85: 'undying',\n",
+        " 86: 'rubick',\n",
+        " 87: 'disruptor',\n",
+        " 88: 'nyx_assassin',\n",
+        " 89: 'naga_siren',\n",
+        " 90: 'keeper_of_the_light',\n",
+        " 91: 'wisp',\n",
+        " 92: 'visage',\n",
+        " 93: 'slark',\n",
+        " 94: 'medusa',\n",
+        " 95: 'troll_warlord',\n",
+        " 96: 'centaur',\n",
+        " 97: 'magnataur',\n",
+        " 98: 'shredder',\n",
+        " 99: 'bristleback',\n",
+        " 100: 'tusk',\n",
+        " 101: 'skywrath_mage',\n",
+        " 102: 'abaddon',\n",
+        " 103: 'elder_titan',\n",
+        " 104: 'legion_commander',\n",
+        " 106: 'ember_spirit',\n",
+        " 107: 'earth_spirit',\n",
+        " 108: 'abyssal_underlord',\n",
+        " 109: 'terrorblade',\n",
+        " 110: 'phoenix'}"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
