update examples again

--- a/examples/Pro Matches.ipynb
+++ b/examples/Pro Matches.ipynb
@@ -30,7 +30,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -59,13 +59,11 @@
       "for f in filter(lambda x: x.suffix == '.json', p.iterdir()):\n",
       "    with f.open() as infile:\n",
       "        \n",
-      "        details[f.stem] = api.DetailsResponse(json.load(infile))\n",
-      "\n"
+      "        details[f.stem] = api.DetailsResponse(json.load(infile))\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "code",
